--- a/a2/.htaccess
+++ b/a2/.htaccess
@@ -12,9 +12,9 @@ KrbVerifyKDC off
 # Below, replace 's1234567' with your sID and 's1234568' with your partner's sID
 # If assignments allow more partners, add more 'require user' lines
   
-  require user s1234567@RMIT.INTERNAL 
-  require user s1234568@RMIT.INTERNAL
-
+  require user s3723996@RMIT.INTERNAL 
+  NOTE: I don't have a partner and am happy to complete the assignment individually.
+	
 
 # Staff access, do not modify: 
   require expr %{REMOTE_USER} =~ /^e\d+@RMIT\.INTERNAL$/
